# fch

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
common/: bmi2.cpp  bmi2.h  definitions.cpp  definitions.h  utility.cpp  utility.h  zp7.h
common/test_cases/: all_cases.h  circle_9to8.h  hypersphere_5to1.h  hypersphere_n_to_k.h  klein_5to3.h  s1_k_times.h  test_case_template.h
fch/: fch.cpp  fch.h  main_fch.cpp  main_fch_to_hypercubes.cpp  pta_find_first_simplex.cpp  pta_find_first_simplex.h
gcch/: gch.cpp  gch.h  main_gcch.cpp  main_reorder_hypercubes.cpp  main_skeleton_hypercubes.cpp
pta/: main_pta.cpp  main_skeleton_pta.cpp  permutahedron.cpp  permutahedron.h
